force-app/main/default/objects/maps__MarkerLayerRelatedList__c/maps__MarkerLayerRelatedList__c.object-meta.xml
<CustomObject>
    <label>Maps Marker Layer Related List</label>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Marker Layer Related Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>