force-app/main/default/objects/maps__MarkerLayerRelatedList__c/fields/maps__Column3__c.field-meta.xml
<CustomField>
    <fullName>maps__Column3__c</fullName>
    <label>Column 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>