force-app/main/default/objects/maps__MarkerLayerRelatedList__c/fields/maps__ListLabel__c.field-meta.xml
<CustomField>
    <fullName>maps__ListLabel__c</fullName>
    <label>List Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>