force-app/main/default/objects/maps__MarkerLayerRelatedList__c/fields/maps__NumToDisplay__c.field-meta.xml
<CustomField>
    <fullName>maps__NumToDisplay__c</fullName>
    <label>Num To Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>