force-app/main/default/objects/maps__MarkerLayerRelatedList__c/fields/maps__ReferenceField__c.field-meta.xml
<CustomField>
    <fullName>maps__ReferenceField__c</fullName>
    <label>Reference Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>