force-app/main/default/objects/maps__MarkerLayerRelatedList__c/fields/maps__RelatedSort__c.field-meta.xml
<CustomField>
    <fullName>maps__RelatedSort__c</fullName>
    <label>Sort Related List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>