force-app/main/default/objects/maps__MarkerLayerRelatedList__c/fields/maps__SavedQuery__c.field-meta.xml
<CustomField>
    <fullName>maps__SavedQuery__c</fullName>
    <label>Saved Query</label>
    <referenceTo>maps__MarkerLayer__c</referenceTo>
    <relationshipLabel>Maps Related Lists</relationshipLabel>
    <relationshipName>Maps_Related_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>